# -Discrete.ai

./: .dockerignore  .env.example  ALTERNATIVE_EXECUTION.md  DEPLOYMENT.md  DISCRETE_PRODUCTIONS.md  DUPE_DEPLOYMENT.md  Dockerfile  FEATURE_REQUIREMENTS.md  PRODUCTION_COMPLETION.md  README.md  SPEC.md  STATUS.md  THIRD_PARTY_NOTICES.md  ai_generation.py  app-ai.js  app.js  app.py  cyglobs_app.py  cyglobsgl.css  cyglobsgl.js  cyglobsgl_generation.py  discrete_ai.py  discrete_server.py  graphics_runtime.py  index.html  media_conversion.py  media_diagnostics.py  pyproject.toml  requirements.txt  server.py  studio_api.py  styles.css
.github/: dependabot.yml
.github/workflows/: alternative-verification.yml  deploy.yml  dupe-deploy.yml  dupe-project-check.yml  project-progress.yml  python-ci.yml  verify-production.yml
cyglobs_framework/: __init__.py  comparators.py  config.py  contingency.py  inverse_ops.py  protocol.py  services.py
deploy/: Caddyfile.example
replicated/CyGlobsGL/cyglobsgl/: directives.py
replicated/CyGlobsPythonFramework/framework/: comparators.py
scripts/: __init__.py  alternative_verification.py  automated_package_update.py  backup_database.sh  bootstrap_host.sh  build_production_package.py  check_all.py  convert_media.py  deploy_remote.sh  dupe_release.sh  media_check.py  migrate.py  production_smoke_test.py  runtime_smoke.py  static_validate.py
tests/: test_ai_generation.py  test_discrete_ai.py  test_discrete_productions.py  test_dupe_deployment.py  test_media_conversion.py  test_media_diagnostics.py  test_studio_api.py  test_triangulation_pipeline.py  test_vendor_sync.py
