[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-ai"
version = "0.3.0"
description = "Discrete Art Studio powered by the embedded CyGlobs Python framework and CyGlobsGL"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jonathan McKinney"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
discrete-art-studio = "cyglobs_app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.setuptools]
py-modules = [
  "cyglobs_app",
  "discrete_ai",
  "graphics_runtime",
  "studio_api",
]
packages = ["cyglobs_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
