[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-ai"
version = "0.5.0"
description = "Discrete Art Studio powered only by the CyGlobsGL Python framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jonathan McKinney"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
discrete-art-studio = "cyglobs_app:main"
discrete-migrate = "scripts.migrate:migrate"
discrete-media-check = "scripts.media_check:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.setuptools]
py-modules = [
  "ai_generation",
  "cyglobsgl_generation",
  "cyglobs_app",
  "discrete_ai",
  "graphics_runtime",
  "media_diagnostics",
  "studio_api",
]
packages = ["cyglobs_framework", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
