[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cyglobs-art-studio"
version = "0.7.0"
description = "CyGlobs full-stack art studio with manual DUPE, DEDUPE, and media conversion operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jonathan McKinney"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
cyglobs-art-studio = "cyglobs_app:main"
cyglobs-migrate = "scripts.migrate:migrate"
cyglobs-media-check = "scripts.media_check:main"
cyglobs-media-convert = "scripts.convert_media:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[tool.setuptools]
py-modules = [
  "ai_generation",
  "cyglobsgl_generation",
  "cyglobs_app",
  "discrete_ai",
  "graphics_runtime",
  "media_conversion",
  "media_diagnostics",
  "studio_api",
]
packages = ["cyglobs_framework", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
